In Progress - Government Real Estate With Map

--- a/displaytabs/GovernmentUI-MainTemplate.html
+++ b/displaytabs/GovernmentUI-MainTemplate.html
@@ -30,15 +30,13 @@
                                 <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                <div style="display: flex;">
-                                    <div style="flex: 40%">
-                                    </div>
-                                    <div style="flex: 60%; margin-left: 15px;">
-                                    </div>
+                                <div style="display: flex; flex-direction: column;">
+                                    <div class="DisplayTabCommon" tabName="dashboard" tabUrl="RealEstateProfile"></div>
+                                    <div class="DisplayTabCommon" tabName="dashboard" tabUrl="AddressMap"></div>
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="SearchEmployee"></div>
+                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="SearchRealEstate"></div>
                             </div>
                         </div>
                     </div>
