--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
 
   <link rel="stylesheet" href="plugins/printjs/print.min.css">
+  <link rel="stylesheet" href="plugins/leaflet/leaflet.css">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -303,6 +304,17 @@
   <script src="plugins/webdatarocks/webdatarocks.js"></script>
 
   <script src="plugins/printjs/print.min.js"></script>
+  <script src="plugins/leaflet/leaflet.js"></script>
+  <script src="plugins/leaflet/leaflet.js.map"></script>
+
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+  <!-- Load Esri Leaflet from CDN -->
+  <script src="https://unpkg.com/esri-leaflet@2.3.3/dist/esri-leaflet.js" integrity="sha512-cMQ5e58BDuu1pr9BQ/eGRn6HaR6Olh0ofcHFWe5XesdCITVuSBiBZZbhCijBe5ya238f/zMMRYIMIIg1jxv4sQ==" crossorigin=""></script>
+  <!-- Load Esri Leaflet Geocoder from CDN -->
+  <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.3.2/dist/esri-leaflet-geocoder.css" integrity="sha512-IM3Hs+feyi40yZhDH6kV8vQMg4Fh20s9OzInIIAc4nx7aMYMfo+IenRUekoYsHZqGkREUgx0VvlEsgm7nCDW9g==" crossorigin="">
+  <script src="https://unpkg.com/esri-leaflet-geocoder@2.3.2/dist/esri-leaflet-geocoder.js" integrity="sha512-8twnXcrOGP3WfMvjB0jS5pNigFuIWj4ALwWEgxhZ+mxvjF5/FBPVd5uAxqT8dd2kUmTVK9+yQJ4CmTmSg/sXAQ==" crossorigin=""></script>
+  
 
   <script src="js/others/dropzone.js"></script>
   <script src="js/others/jquery.fullscreen.js"></script>
@@ -373,6 +385,7 @@
   <script src="js/modules/submodules/SupplierUI.js"></script>
   <script src="js/modules/submodules/AccountChartUI.js"></script>
   <script src="js/modules/submodules/ProductRequestUI.js"></script>
+  <script src="js/modules/submodules/RealEstateUI.js"></script>
 
   <script src="js/saas/ReviewCenter.js"></script>
   
