In Progress - Real Estate Map and Profile

--- a/displaytabs/tabs/common/RealEstateProfile.html
+++ b/displaytabs/tabs/common/RealEstateProfile.html
@@ -7,11 +7,8 @@
     </div>
     <div class="box-body box-profile">
         <div style="display: flex; flex-wrap: wrap;">
-            <div style="flex: 50%;">
-                <span><a href="#" class="RealEstateUI_RealEstateAddress" module="RealEstateUI" tabname="dashboard">--</a></span>
-            </div>
-            <div style="flex: 50%">
-                <small class="text-muted pull-right"><i class="fa fa-home"></i> <i class="RealEstateUI_RealEstateZipCode">--</i></small>
+            <div style="flex: 100%;">
+                <span><h3><a href="#" class="RealEstateUI_RealEstateAddress" module="RealEstateUI" tabname="dashboard">--</a></h3></span>
             </div>
             <div style="flex: 50%">
                 <small class="text-muted"><i class="fa fa-compass"> Lat: </i> <i class="RealEstateUI_RealEstateLatitude">--</i></small>
