--- a/home.html
+++ b/home.html
@@ -307,14 +307,14 @@
   <script src="plugins/leaflet/leaflet.js"></script>
   <script src="plugins/leaflet/leaflet.js.map"></script>
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+  <link rel="stylesheet" href="plugins/leaflet/unpkg/Control.Geocoder.css" />
+  <script src="plugins/leaflet/unpkg/Control.Geocoder.js"></script>
   <!-- Load Esri Leaflet from CDN -->
-  <script src="https://unpkg.com/esri-leaflet@2.3.3/dist/esri-leaflet.js" integrity="sha512-cMQ5e58BDuu1pr9BQ/eGRn6HaR6Olh0ofcHFWe5XesdCITVuSBiBZZbhCijBe5ya238f/zMMRYIMIIg1jxv4sQ==" crossorigin=""></script>
+  <script src="plugins/leaflet/unpkg/esri-leaflet.js"></script>
   <!-- Load Esri Leaflet Geocoder from CDN -->
-  <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.3.2/dist/esri-leaflet-geocoder.css" integrity="sha512-IM3Hs+feyi40yZhDH6kV8vQMg4Fh20s9OzInIIAc4nx7aMYMfo+IenRUekoYsHZqGkREUgx0VvlEsgm7nCDW9g==" crossorigin="">
-  <script src="https://unpkg.com/esri-leaflet-geocoder@2.3.2/dist/esri-leaflet-geocoder.js" integrity="sha512-8twnXcrOGP3WfMvjB0jS5pNigFuIWj4ALwWEgxhZ+mxvjF5/FBPVd5uAxqT8dd2kUmTVK9+yQJ4CmTmSg/sXAQ==" crossorigin=""></script>
-  
+  <link rel="stylesheet" href="plugins/leaflet/unpkg/esri-leaflet-geocoder.css"/>
+  <script src="plugins/leaflet/unpkg/esri-leaflet-geocoder.js"></script>
+
 
   <script src="js/others/dropzone.js"></script>
   <script src="js/others/jquery.fullscreen.js"></script>
