In Progress - Real Estate Profile and Map

--- a/displaytabs/GovernmentUI-MainTemplate.html
+++ b/displaytabs/GovernmentUI-MainTemplate.html
@@ -26,10 +26,11 @@
                 <div class="tab-content no-padding">
                     <div class="tab-pane active" id="Dashboard">
                         <div style="display: flex; background: #ecf0f5;">
-                            <div style="flex: 25%; margin: 15px 0px;">
+                            <!-- <div style="flex: 25%; margin: 15px 0px;">
                                 <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
-                            </div>
-                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
+                            </div> -->
+                            <div style="flex: 75%; margin: 15px 0px;">
+                            <!-- <div style="flex: 75%; margin: 15px 0px; margin-left: 15px;"> -->
                                 <div style="display: flex; flex-direction: column;">
                                     <div class="DisplayTabCommon" tabName="dashboard" tabUrl="RealEstateProfile"></div>
                                     <div class="DisplayTabCommon" tabName="dashboard" tabUrl="AddressMap"></div>
