In Progress - Gevernment 360

--- a/displaytabs/tabs/GovernmentUI/Header.html
+++ b/displaytabs/tabs/GovernmentUI/Header.html
@@ -1,10 +1,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
 <h1>
     Government 360
 </h1>
-<br/>
-<div class="row" style="display: flex;">
+<ol class="breadcrumb">
+    <li>
+        <a href="#" class="pull-right btn-box-tool toggle-box" toggletarget=".GovernmentUI_Header">Toggle</a>
+    </li>
+</ol>
+<div class="row GovernmentUI_Header" style="display: flex; margin-top: 15px;">
     <div style="flex: 1; margin: 0 15px;">
         <div class="info-box">
             <span class="info-box-icon bg-aqua"><i class="fa fa-fw fa-user"></i></span>
