--- a/displaytabs/tabs/common/RealEstateProfile.html
+++ b/displaytabs/tabs/common/RealEstateProfile.html
@@ -4,8 +4,9 @@
     <div class="box-header ui-sortable-handle">
         <i class="fa fa-home"></i>
         <h3 class="box-title">Real Estate <small class="RealEstateUI_RealEstateAddress">Choose from the right</small></h3>
+        <a href="#" class="pull-right btn-box-tool toggle-box" toggletarget=".RealEstateUI_RealEstateProfileBox">Toggle</a>
     </div>
-    <div class="box-body box-profile">
+    <div class="box-body box-profile RealEstateUI_RealEstateProfileBox">
         <div style="display: flex; flex-wrap: wrap;">
             <div style="flex: 100%;">
                 <span><h3><a href="#" class="RealEstateUI_RealEstateAddress" module="RealEstateUI" tabname="dashboard">--</a></h3></span>
