In Progress - Government 360 Dashboard

--- a/displaytabs/tabs/common/RealEstateProfile.html
+++ b/displaytabs/tabs/common/RealEstateProfile.html
@@ -3,7 +3,7 @@
 <div class="box box-default">
     <div class="box-header ui-sortable-handle">
         <i class="fa fa-home"></i>
-        <h3 class="box-title">Real Estate <small class="RealEstateUI_RealEstateAddress">Choose from the right</small></h3>
+        <h3 class="box-title">Real Estate&nbsp;&nbsp;&nbsp;<small class="RealEstateUI_RealEstateAddress lead" style="color: #3c8dbc;">Choose from the right</small></h3>
         <a href="#" class="pull-right btn-box-tool toggle-box" toggletarget=".RealEstateUI_RealEstateProfileBox">Toggle</a>
     </div>
     <div class="box-body box-profile RealEstateUI_RealEstateProfileBox">
