--- a/displaytabs/tabs/GovernmentUI/RealEstateAssessmentRecords.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateAssessmentRecords.html
@@ -8,7 +8,7 @@
             <button type="button" class="btn btn-default pull-right RealEstateUI_btnAddInterviewSchedule" data-toggle="modal" data-target="#RealEstateUI_AddInterviewScheduleDialog"><i class="fa fa-plus"></i> New Assessment</button>
         </div>
     </div>
-    <div class="box-body box-profile RealEstateUI_AssessmentRecords">
+    <div class="box-body box-profile RealEstateUI_AssessmentRecords" tabName="_TABNAME_">
         <b>No Assessment Record Found!</b>
     </div>
     <div class="modal fade" id="RealEstateUI_AddInterviewScheduleDialog" style="display: none;">
