--- a/displaytabs/tabs/GovernmentUI/RealEstateFieldInspectionRecords.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateFieldInspectionRecords.html
@@ -8,7 +8,7 @@
             <button type="button" class="btn btn-default pull-right RealEstateUI_btnAddInterviewSchedule" data-toggle="modal" data-target="#RealEstateUI_AddInterviewScheduleDialog"><i class="fa fa-plus"></i> New Field Inspection</button>
         </div>
     </div>
-    <div class="box-body box-profile RealEstateUI_InterviewScheduleList">
+    <div class="box-body box-profile RealEstateUI_FieldInspectionRecords" tabName="_TABNAME_">
         <b>No Field Inspection Found!</b>
     </div>
     <div class="modal fade" id="RealEstateUI_AddInterviewScheduleDialog" style="display: none;">
