In Progress - Government 360

--- a/displaytabs/GovernmentUI-MainTemplate.html
+++ b/displaytabs/GovernmentUI-MainTemplate.html
@@ -73,12 +73,56 @@
                         </div>
                     </div>
                     <div class="tab-pane" id="Assessment">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 25%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
+                            </div>
+                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="RealEstateAssessmentProfile"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="SearchRealEstateAssessment"></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane" id="BuildingPermit">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 25%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
+                            </div>
+                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="RealEstateBuildingPermitProfile"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="SearchRealEstateBuildingPermit"></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane" id="FieldInspection">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 25%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
+                            </div>
+                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="RealEstateFieldInspectionProfile"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="SearchRealEstateFieldInspection"></div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane" id="Transfer">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 25%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
+                            </div>
+                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="RealEstateTransferProfile"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="SearchRealEstateTransfer"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
