--- a/displaytabs/tabs/GovernmentUI/RealEstateTransferRecords.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateTransferRecords.html
@@ -5,67 +5,51 @@
         <i class="fa fa-comments-o"></i>
         <h3 class="box-title">Transfer Record</h3>
         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-            <button type="button" class="btn btn-default pull-right RealEstateUI_btnAddInterviewSchedule" data-toggle="modal" data-target="#RealEstateUI_AddInterviewScheduleDialog"><i class="fa fa-plus"></i> New Transfer</button>
+            <button type="button" class="btn btn-default pull-right RealEstateUI_btnAddTransfer" data-toggle="modal" data-target="#RealEstateUI_AddTransferDialog"><i class="fa fa-plus"></i> New Transfer</button>
         </div>
     </div>
     <div class="box-body box-profile RealEstateUI_TransferRecords" tabName="_TABNAME_">
         <b>No Transfer Record Found!</b>
     </div>
-    <div class="modal fade" id="RealEstateUI_AddInterviewScheduleDialog" style="display: none;">
+    <div class="modal fade" id="RealEstateUI_AddTransferDialog" style="display: none;">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h3 class="modal-title">New Interview Schedule</h3>
+                    <h3 class="modal-title">New Transfer</h3>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label class="control-label">Job Posting</label>
-                        <div class="input-group">
-                            <input type="text" class="form-control autocomplete displayEdit RealEstateUI_NewInterviewSchedule" name="RealEstateUI_NewInterviewScheduleJobCode" placeholder="Job Posting" module="RealEstateUI" mainmodule="RealEstateUI" autoname="jobCode" helptitle="JobCode">
-                            <input class="form-control HiddenAutoComplete" name="RealEstateUI_NewInterviewScheduleJobCode" type="hidden" module="RealEstateUI" mainmodule="RealEstateUI" autonamefield="jobCode" value="">
-                            <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
-                            <div class="autocomplete-items" module="RealEstateUI" mainmodule="RealEstateUI" autoname="jobCode">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Applicant</label>
-                        <div class="input-group">
-                            <input type="text" class="form-control autocomplete displayEdit RealEstateUI_NewInterviewSchedule" name="RealEstateUI_NewInterviewScheduleApplicantCode" placeholder="Applicant" module="RealEstateUI" mainmodule="RealEstateUI" autoname="applicantCode" helptitle="applicantCode">
-                            <input class="form-control HiddenAutoComplete" name="RealEstateUI_NewInterviewScheduleApplicantCode" type="hidden" module="RealEstateUI" mainmodule="RealEstateUI" autoNameField="applicantCode" value="">
-                            <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
-                            <div class="autocomplete-items" module="RealEstateUI" mainmodule="RealEstateUI" autoname="applicantCode">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Look For</label>
-                        <div class="input-group">
-                            <input type="text" class="form-control autocomplete displayEdit RealEstateUI_NewInterviewSchedule" name="RealEstateUI_NewInterviewScheduleLookForCode" placeholder="Look For" module="RealEstateUI" mainmodule="RealEstateUI" autoname="lookForCode" helptitle="lookForCode">
-                            <input class="form-control HiddenAutoComplete" name="RealEstateUI_NewInterviewScheduleLookForCode" type="hidden" module="RealEstateUI" mainmodule="RealEstateUI" autonamefield="lookForCode" value="">
-                            <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
-                            <div class="autocomplete-items" module="RealEstateUI" mainmodule="RealEstateUI" autoname="lookForCode">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
                         <label class="control-label">Date</label>
                         <div class="input-group date">
-                            <input type="text" name="RealEstateUI_NewInterviewScheduleInterviewDate" placeholder="Interview Date" class="form-control calendar displayEdit RealEstateUI_NewInterviewSchedule" module="RealEstateUI" mainmodule="RealEstate">
+                            <input type="text" name="RealEstateUI_NewTransferTransferDate" placeholder="Transfer Date" class="form-control calendar displayEdit RealEstateUI_NewTransfer" module="RealEstateUI" mainmodule="RealEstate">
                             <div class="input-group-addon displayEdit">
                                 <i class="fa fa-calendar"></i>
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
+                        <label class="control-label">Issuer</label>
+                        <div class="input-group">
+                            <input type="text" class="form-control autocomplete displayEdit RealEstateUI_NewTransfer" name="RealEstateUI_NewTransferIssuerCode" placeholder="Issuer" module="RealEstateUI" mainmodule="RealEstateUI" autoname="issuerCode" helptitle="IssuerCode">
+                            <input class="form-control HiddenAutoComplete" name="RealEstateUI_NewTransferIssuerCode" type="hidden" module="RealEstateUI" mainmodule="RealEstateUI" autonamefield="issuerCode" value="">
+                            <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
+                            <div class="autocomplete-items" module="RealEstateUI" mainmodule="RealEstateUI" autoname="issuerCode">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Amount Paid</label>
+                        <input type="text" name="RealEstateUI_NewTransferTransferAmountPaid" placeholder="Amount Paid" class="form-control displayEdit RealEstateUI_NewTransfer" module="RealEstateUI" mainmodule="RealEstate">
+                    </div>
+                    <div class="form-group">
                         <label class="control-label">Remarks</label>
-                        <input type="text" name="RealEstateUI_NewInterviewScheduleInterviewRemarks" placeholder="Remarks" class="form-control displayEdit RealEstateUI_NewInterviewSchedule" module="RealEstateUI" mainmodule="RealEstate">
+                        <input type="text" name="RealEstateUI_NewTransferTransferRemarks" placeholder="Remarks" class="form-control displayEdit RealEstateUI_NewTransfer" module="RealEstateUI" mainmodule="RealEstate">
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary RealEstateUI_btnAddInterviewScheduleClose">Save And Close</button>
+                    <button type="button" class="btn btn-primary RealEstateUI_btnAddTransferClose">Save And Close</button>
                 </div>
             </div>
         </div>
