In Progress - Government 360

--- a/displaytabs/GovernmentUI-MainTemplate.html
+++ b/displaytabs/GovernmentUI-MainTemplate.html
@@ -8,23 +8,26 @@
             <div class="nav-tabs-custom" style="margin-top: 5px;">
                 <ul class="nav nav-tabs">
                     <li class="tab-pane active">
-                        <a href="#Dashboard" data-toggle="tab" aria-expanded="true">Dashboard</a>
+                        <a href="#RealEstate" data-toggle="tab" aria-expanded="true">Real Estate</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#Assessment" data-toggle="tab" aria-expanded="false">Assessment</a>
+                        <a href="#CommunityTaxCertificate" data-toggle="tab" aria-expanded="false">CommunityTaxCertificate</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#BuildingPermit" data-toggle="tab" aria-expanded="false">Building Permit</a>
+                        <a href="#BusinessPermit" data-toggle="tab" aria-expanded="false">Business Permit</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#FieldInspection" data-toggle="tab" aria-expanded="false">Field Inspection</a>
+                        <a href="#GovernmentCashier" data-toggle="tab" aria-expanded="false">Cashier</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#Transfer" data-toggle="tab" aria-expanded="false">Transfer</a>
+                        <a href="#GovernmentAccounting" data-toggle="tab" aria-expanded="false">Accounting</a>
+                    </li>
+                    <li class="tab-pane">
+                        <a href="#GovernmentReports" data-toggle="tab" aria-expanded="false">Reports</a>
                     </li>
                 </ul>
                 <div class="tab-content no-padding">
-                    <div class="tab-pane active" id="Dashboard">
+                    <div class="tab-pane active" id="RealEstate">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 75%; margin: 15px 0px;">
                                 <div style="display: flex; flex-direction: column;">
@@ -72,55 +75,53 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" id="Assessment">
+                    <div class="tab-pane" id="CommunityTaxCertificate">
                         <div style="display: flex; background: #ecf0f5;">
-                            <div style="flex: 25%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
-                            </div>
-                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="RealEstateAssessmentProfile"></div>
+                            <div style="flex: 75%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabName="CommunityTaxCertificate" tabUrl="CommunityTaxCertificateProfile"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="SearchRealEstateAssessment"></div>
+                                <div class="DisplayTabCommon" tabName="CommunityTaxCertificate" tabUrl="SearchCommunityTaxCertificate"></div>
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" id="BuildingPermit">
+                    <div class="tab-pane" id="BusinessPermit">
                         <div style="display: flex; background: #ecf0f5;">
-                            <div style="flex: 25%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
-                            </div>
-                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="RealEstateBuildingPermitProfile"></div>
+                            <div style="flex: 75%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabName="BusinessPermit" tabUrl="CitizenProfile"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="SearchRealEstateBuildingPermit"></div>
+                                <div class="DisplayTabCommon" tabName="BusinessPermit" tabUrl="SearchCitizen"></div>
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" id="FieldInspection">
+                    <div class="tab-pane" id="GovernmentCashier">
                         <div style="display: flex; background: #ecf0f5;">
-                            <div style="flex: 25%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
-                            </div>
-                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="RealEstateFieldInspectionProfile"></div>
+                            <div style="flex: 75%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabName="GovernmentCashier" tabUrl="CitizenProfile"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="SearchRealEstateFieldInspection"></div>
+                                <div class="DisplayTabCommon" tabName="GovernmentCashier" tabUrl="SearchCitizen"></div>
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" id="Transfer">
+                    <div class="tab-pane" id="GovernmentAccounting">
                         <div style="display: flex; background: #ecf0f5;">
-                            <div style="flex: 25%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
-                            </div>
-                            <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="RealEstateTransferProfile"></div>
+                            <div style="flex: 75%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabName="GovernmentAccounting" tabUrl="CitizenProfile"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="SearchRealEstateTransfer"></div>
+                                <div class="DisplayTabCommon" tabName="GovernmentAccounting" tabUrl="SearchCitizen"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="GovernmentReports">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 75%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabName="GovernmentReports" tabUrl="CitizenProfile"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="GovernmentReports" tabUrl="SearchCitizen"></div>
                             </div>
                         </div>
                     </div>
