--- a/home.html
+++ b/home.html
@@ -386,6 +386,12 @@
   <script src="js/modules/submodules/AccountChartUI.js"></script>
   <script src="js/modules/submodules/ProductRequestUI.js"></script>
   <script src="js/modules/submodules/RealEstateUI.js"></script>
+  <script src="js/modules/submodules/CitizenUI.js"></script>
+  <script src="js/modules/submodules/CommunityTaxCertificateUI.js"></script>
+  <script src="js/modules/submodules/BusinessPermitUI.js"></script>
+  <script src="js/modules/submodules/GovernmentCashierUI.js"></script>
+  <script src="js/modules/submodules/GovernmentAccountingUI.js"></script>
+  <script src="js/modules/submodules/GovernmentReportsUI.js"></script>
 
   <script src="js/saas/ReviewCenter.js"></script>
   
