In Progress - Government 360

--- a/displaytabs/GovernmentUI-MainTemplate.html
+++ b/displaytabs/GovernmentUI-MainTemplate.html
@@ -11,13 +11,16 @@
                         <a href="#RealEstate" data-toggle="tab" aria-expanded="true">Real Estate</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#CommunityTaxCertificate" data-toggle="tab" aria-expanded="false">CommunityTaxCertificate</a>
+                        <a href="#CommunityTaxCertificate" data-toggle="tab" aria-expanded="false">Community Tax Certificate</a>
                     </li>
                     <li class="tab-pane">
                         <a href="#BusinessPermit" data-toggle="tab" aria-expanded="false">Business Permit</a>
                     </li>
                     <li class="tab-pane">
                         <a href="#GovernmentCashier" data-toggle="tab" aria-expanded="false">Cashier</a>
+                    </li>
+                    <li class="tab-pane">
+                        <a href="#GovernmentPrinting" data-toggle="tab" aria-expanded="false">Printing</a>
                     </li>
                     <li class="tab-pane">
                         <a href="#GovernmentAccounting" data-toggle="tab" aria-expanded="false">Accounting</a>
@@ -88,20 +91,30 @@
                     <div class="tab-pane" id="BusinessPermit">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 75%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabName="BusinessPermit" tabUrl="CitizenProfile"></div>
+                                <div class="DisplayTabCommon" tabName="BusinessPermit" tabUrl="BusinessPermitProfile"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="BusinessPermit" tabUrl="SearchCitizen"></div>
+                                <div class="DisplayTabCommon" tabName="BusinessPermit" tabUrl="SearchBusinessPermit"></div>
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane" id="GovernmentCashier">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 75%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabName="GovernmentCashier" tabUrl="CitizenProfile"></div>
+                                <div class="DisplayTabCommon" tabName="GovernmentCashier" tabUrl="GovernmentCashierProfile"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="GovernmentCashier" tabUrl="SearchCitizen"></div>
+                                <div class="DisplayTabCommon" tabName="GovernmentCashier" tabUrl="SearchGovernmentCashier"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="GovernmentPrinting">
+                        <div style="display: flex; background: #ecf0f5;">
+                            <div style="flex: 75%; margin: 15px 0px;">
+                                <div class="DisplayTabCommon" tabName="GovernmentPrinting" tabUrl="GovernmentPrintingProfile"></div>
+                            </div>
+                            <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+                                <div class="DisplayTabCommon" tabName="GovernmentPrinting" tabUrl="SearchGovernmentPrinting"></div>
                             </div>
                         </div>
                     </div>
