--- a/displaytabs/tabs/common/CommunityTaxCertificateProfile.html
+++ b/displaytabs/tabs/common/CommunityTaxCertificateProfile.html
@@ -13,26 +13,31 @@
             <div style="display: flex; flex-wrap: wrap;">
                 <div class="form-group" style="flex: 18%; margin-left: 15px;">
                     <label>CTC Number</label>
-                    <input type="text" class="form-control" module="CommunityTaxCertificateUI" name="ctcNumber" disabled="">
+                    <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="ctcNumber" disabled="">
                 </div>
                 <div class="form-group" style="flex: 18%; margin-left: 15px;">
                     <label>Invoiced Number</label>
-                    <input type="text" class="form-control" module="CommunityTaxCertificateUI" name="invoiceNumber" disabled="">
+                    <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="invoiceNumber" disabled="">
                 </div>
                 <div class="form-group" style="flex: 18%; margin-left: 15px;">
                     <label>Issuer</label>
-                    <input type="text" class="form-control" module="CommunityTaxCertificateUI" name="issuerCode" disabled="">
+                    <div>
+                        <input type="text" class="form-control autocomplete displayEdit editCtc" name="issuerCode" placeholder="Issuer" module="CommunityTaxCertificateUI" mainmodule="CommunityTaxCertificateUI" autoname="issuerCode" helptitle="issuerCode" disabled="">
+                        <input class="form-control HiddenAutoComplete" name="issuerCode" type="hidden" module="CommunityTaxCertificateUI" mainmodule="CommunityTaxCertificateUI" autonamefield="issuerCode" value="">
+                        <div class="autocomplete-items" module="CommunityTaxCertificateUI" mainmodule="CommunityTaxCertificateUI" autoname="issuerCode">
+                        </div>
+                    </div>
                 </div>
                 <div class="form-group" style="flex: 18%; margin-left: 15px;">
                     <label>Date</label>
-                    <input type="text" class="form-control" module="CommunityTaxCertificateUI" name="ctcDate" disabled="">
+                    <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="ctcDate" disabled="">
                 </div>
 
                 <div style="flex: 100%; display: flex;">
                     <div style="flex: 1; display: flex; flex-direction: column;">
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Purpose</label>
-                            <select class="form-control" module="CommunityTaxCertificateUI" name="ctcPurpose">
+                            <select class="form-control editCtc" module="CommunityTaxCertificateUI" name="ctcPurpose">
                                 <option value="Identification Card">Identification Card</option>
                                 <option value="Notary Public Document">Notary Public Document</option>
                                 <option value="Government Employee">Government Employee</option>
@@ -45,33 +50,33 @@
                         </div>
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Citizen</label>
-                            <input type="text" class="form-control" module="CommunityTaxCertificateUI" name="citizenCode" placeholder="Enter ...">
+                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="citizen" placeholder="Enter ...">
                         </div>
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Address</label>
-                            <input type="text" class="form-control" module="CommunityTaxCertificateUI" name="address" placeholder="Enter ...">
+                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="address" placeholder="Enter ...">
                         </div>
                     </div>
                     <div style="flex: 1; display: flex; flex-direction: column;">
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Amount A</label>
-                            <input type="text" class="form-control" module="CommunityTaxCertificateUI" name="amountA" placeholder="Enter ...">
+                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="amountA" placeholder="Enter ...">
                         </div>
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Amount B1</label>
-                            <input type="text" class="form-control" module="CommunityTaxCertificateUI" name="amountB1" placeholder="Enter ..."">
+                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="amountB1" placeholder="Enter ..."">
                         </div>
                         <div class=" form-group" style="margin-left: 15px;">
                             <label>Amount B2</label>
-                            <input type="text" class="form-control" module="CommunityTaxCertificateUI" name="amountB2" placeholder="Enter ...">
+                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="amountB2" placeholder="Enter ...">
                         </div>
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Amount B3</label>
-                            <input type="text" class="form-control" module="CommunityTaxCertificateUI" name="amountB3" placeholder="Enter ...">
+                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="amountB3" placeholder="Enter ...">
                         </div>
                         <div class="form-group" style="margin-left: 15px;">
                             <label>Total Amount</label>
-                            <input type="text" class="form-control" module="CommunityTaxCertificateUI" name="totalAmount" disabled="">
+                            <input type="text" class="form-control editCtc" module="CommunityTaxCertificateUI" name="totalAmount" disabled="">
                         </div>
                     </div>
                 </div>
